Добавлена возможность просматривать людей, которые подписались и отписались от группы.

--- a/VkBot.Manager/Views/Manage/ShowRecoveryCodes.cshtml
+++ b/VkBot.Manager/Views/Manage/ShowRecoveryCodes.cshtml
@@ -1,5 +1,4 @@
-﻿@using VkBot.Manager.ViewModels.ManageViewModels
-@model VkBot.Manager.ViewModels.ManageViewModels.ShowRecoveryCodesViewModel
+﻿@model VkBot.Manager.ViewModels.ManageViewModels.ShowRecoveryCodesViewModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
