--- a/VkBot.Manager/Views/Shared/_Layout.cshtml
+++ b/VkBot.Manager/Views/Shared/_Layout.cshtml
@@ -11,8 +11,7 @@
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    </environment>
+</environment>
 
 </head>
 <body>
@@ -40,8 +39,15 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-controller="Advice" asp-action="Index">Советы</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Message" asp-action="Index">Сообщения пользователей</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Аналитика
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" asp-controller="VkUser" asp-action="Index">Пользователи</a>
+                        <a class="dropdown-item" asp-controller="VkUser" asp-action="Messages">Сообщения</a>
+                        <a class="dropdown-item" asp-controller="VkUser" asp-action="Subscriptions">Подписки</a>
+                    </div>
                 </li>
             </ul>
             @await Html.PartialAsync("_LoginPartial")
@@ -60,7 +66,7 @@
 
 <environment include="Development">
     <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/lib/bootstrap/bootstrap.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </environment>
 <environment exclude="Development">
@@ -70,12 +76,11 @@
             crossorigin="anonymous"
             integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
     </script>
-    <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" 
             asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
             asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-            crossorigin="anonymous"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-    </script>
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
+            crossorigin="anonymous"></script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
 </environment>
 
