Добавлен набор сущностей базы данных для будущих изменений

--- a/VkBot.Manager/Views/Account/Login.cshtml
+++ b/VkBot.Manager/Views/Account/Login.cshtml
@@ -2,6 +2,7 @@
 @using System.Linq
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
+@using VkBot.Manager.Data
 @using VkBot.Manager.ViewModels.AccountViewModels
 @model VkBot.Manager.ViewModels.AccountViewModels.LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
