--- a/VkBot.Manager/Views/Manage/_ManageNav.cshtml
+++ b/VkBot.Manager/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@using VkBot.Manager.Views.Manage
+﻿@using VkBot.Manager.Data
+@using VkBot.Manager.Views.Manage
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
