--- a/VkBot.Manager/Views/VkUser/Subscriptions.cshtml
+++ b/VkBot.Manager/Views/VkUser/Subscriptions.cshtml
@@ -1,5 +1,6 @@
 ﻿@using VkBot.Manager.ViewModels.BotViewModels
-@model VkBot.Manager.Controllers.SubscriptionsVkUserViewModel
+@using VkBot.Manager.ViewModels.VkUserViewModels
+@model VkBot.Manager.ViewModels.VkUserViewModels.SubscriptionsVkUserViewModel
 
 @{
     ViewBag.Title = "Подписки";
