--- a/VkBot.Manager/Views/Stickers/Edit.cshtml
+++ b/VkBot.Manager/Views/Stickers/Edit.cshtml
@@ -114,7 +114,7 @@
 
         function RemoveSentence(stickerEmojiId) {
             $.ajax({
-                url: "@($"{Url.Action("RemoveSentence", "Stickers")}/")" + stickerEmojiId,
+                url: "@($"{Url.Action("RemoveEmoji", "Stickers")}/")" + stickerEmojiId,
                 contentType: "application/json",
                 method: "DELETE",
                 success: function(emojiId) {
