--- a/VkBot.Manager/Views/Shared/_Layout.cshtml
+++ b/VkBot.Manager/Views/Shared/_Layout.cshtml
@@ -53,6 +53,9 @@
                         <a class="dropdown-item" asp-controller="VkUser" asp-action="Subscriptions">Подписки</a>
                     </div>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Competition" asp-action="Index">Конкурс</a>
+                </li>
             </ul>
             @await Html.PartialAsync("_LoginPartial")
         </div>
